Добавлен вертикальный срез - сервис уведомлений
